<resources>
    <string name="app_name">SHOPP!CA</string>
    <string name="app_name1">SHOP</string>
    <string name="app_name2">P!CA</string>
    <string name="toolbar_name">Shoppica</string>
    <string name="toolbar_name_sell">Sell Item</string>
    <string name="toolbar_name_promote">Promote Item</string>
    <string name="toolbar_name_extend">Extend Item</string>
    <string name="toolbar_name_article">Item</string>
    <string name="toolbar_name_view_articles">View all %1$d photos</string>
    <string name="btn_action_report">Report</string>
    <string name="btn_action_feed_back">Send feedback</string>
    <string name="btn_action_send">Send</string>
    <string name="btn_action_skip">Skip</string>
    <string name="btn_action_post">Post</string>
    <string name="btn_action_price">%1$s</string>
    <string name="btn_action_reset">Reset</string>
    <string name="btn_action_filter">Filter</string>
    <string name="btn_action_extend">Extend</string>
    <string name="btn_action_extend_active">Extension Active</string>
    <string name="btn_action_promote">Promote</string>
    <string name="btn_action_delete">Delete</string>
    <string name="btn_action_status">Status…</string>
    <string name="btn_action_promote_active">Promotion Active</string>
    <string name="btn_action_allow">allow</string>
    <string name="btn_action_profile">Your profile</string>
    <string name="btn_action_deny">deny</string>
    <string name="btn_action_ok">OK</string>
    <string name="btn_action_install">Install App</string>
    <string name="btn_action_logout">Log Out</string>
    <string name="btn_action_cancel">Back</string>
    <string name="btn_action_rate">Rate</string>
    <string name="btn_action_follow">Follow</string>
    <string name="btn_action_continue">Continue</string>
    <string name="btn_action_login">Log In</string>
    <string name="btn_action_show">Show</string>
    <string name="btn_action_settings">Settings</string>
    <string name="btn_action_retry">Retry</string>
    <string name="btn_action_camera">Take Photo</string>
    <string name="btn_action_understand">Got It</string>
    <string name="btn_action_country">Choose Country</string>
    <string name="btn_action_ask_me">ask me</string>
    <string name="btn_action_share">Share on Facebook!</string>
    <string name="btn_action_unavailable">Unavailable.</string>
    <string name="btn_action_view_post">View your post</string>
    <string name="btn_action_whatsapp">WhatsApp</string>
    <string name="btn_action_instagram">Instagram</string>
    <string name="btn_action_email">Email</string>
    <string name="btn_action_send_feedback">Send feedback</string>
    <string name="btn_action_follow_instagram">Follow us on Instagram!</string>
    <string name="btn_action_back">Back</string>
    <string name="btn_action_extended">Expired</string>
    <string name="intro_title">Welcome to Shoppica!</string>
    <string name="intro_title_sub">Here are a few quick and useful tips!</string>
    <string name="intro_search">This is your home. Here you\'ll find all items that are currently for sale.</string>
    <string name="intro_filter">This allows you to filter by category, color, price, etc.</string>
    <string name="intro_camera">This allows you to post and sell an item of your own.</string>
    <string name="intro_profile">Here you\'ll see your favorites and listed items.</string>
    <string name="state_error_desc">We\'re sorry! An error has occurred. Please try again later!</string>
    <string name="state_empty_desc">No itemss were found at this moment. Please try again later!</string>
    <string name="state_filter_desc">No items were found. Please check your filter settings and try again.</string>
    <string name="state_connection_desc">Please check your internet connection and try again.</string>
    <string name="state_error_general_desc">Something went wrong on our side! Please check our Facebook-page for updates.</string>
    <string name="toast_notice_sent">Successfully sent!</string>
    <string name="toast_notice_logout_success">Successfully logged out!</string>
    <string name="toast_notice_login_success">Successfully logged in!</string>
    <string name="toast_error_post">We\'re sorry! An error has occurred while posting. Please try again later!</string>
    <string name="toast_error_no_internet_connection">No internet connection.</string>
    <string name="toast_error_report_empty">Write a message…</string>
    <string name="toast_error_report_length">Your message needs to be at least 10 characters in length.</string>
    <string name="toast_error_intent_null">We\'re sorry! An error has occurred. Please try again later!</string>
    <string name="toast_sen_text_copied">Text copied!</string>
    <string name="currency_symbol">%1$s</string>
    <string name="currency_symbol_replace_from">,</string>
    <string name="currency_symbol_replace_to">.</string>
    <string name="snackbar_notice_favorite_added">Added to your favorites!</string>
    <string name="snackbar_notice_favorite_removed">Removed from your favorites.</string>
    <string name="snackbar_error_country_pick">Please enter a country.</string>
    <string name="snackbar_error_filter_no_value_changed">You currently don\'t have any filters selected.</string>
    <string name="snackbar_error_max_5_images">You can choose 3 pictures at most.</string>
    <string name="snackbar_error_max_5_images2">You can add 3 pictures per item.</string>
    <string name="snackbar_error_connection">You don\'t have an internet connection at the moment.</string>
    <string name="snackbar_error_report">You have already reported this person.</string>
    <string name="snackbar_error_report_length">Your message is too long. Please try to shorten it.</string>
    <string name="snackbar_error_contact_yourself">You cannot contact yourself.</string>
    <string name="snackbar_error_unavailable">Unavailable at the moment. Please try again later.</string>
    <string name="snackbar_error_purchase">We\'re sorry! An error has occurred. Please try again later!</string>
    <string name="snackbar_error_ready_purchase">Loading payment options…</string>
    <string name="spannable_follow_us_title">Follow us</string>
    <string name="spannable_follow_username">shoppicacom</string>
    <string name="spannable_follow_us_desc">on Instagram to stay up-to-date on the latest deals and promotions!</string>
    <string name="spannable_promote_desc1">Your item is promoted and</string>
    <string name="spannable_promote_desc2">active</string>
    <string name="spannable_promote_desc3">Extend your promotion now!</string>
    <string name="spannable_extend_desc1">Your item is still</string>
    <string name="spannable_extend_desc2">active</string>
    <string name="spannable_extend_desc3">After this time, your item will expire.</string>
    <string name="spannable_article_offered_by">This item is offered by</string>
    <string name="spannable_article_sold_from">and is sold from</string>
    <string name="settings">Settings</string>
    <string name="settings_facebook_title">Connect to Facebook</string>
    <string name="settings_facebook_sub_title">Connect to Facebook to post and sell your items and save other items to your favorites.</string>
    <string name="settings_facebook_button_title_on">You are connected to Facebook.</string>
    <string name="settings_facebook_button_title_off">Connect to Facebook</string>
    <string name="settings_country_title">Country</string>
    <string name="settings_country_sub_title">Select the country you would like to sell and buy items from.</string>
    <string name="settings_contact_title">Contact methods</string>
    <string name="settings_contact_sub_title">Add contact methods to make sure that potential buyers can reach out to you.</string>
    <string name="settings_location_title">Location</string>
    <string name="settings_location_sub_title">Let us get your current location or fill it in manually. We will add the location to your items so that potential buyers know in what area you roughly live. It is up to you to discuss your exact location (address) with the buyer once they contact you.</string>
    <string name="settings_trade_safe_title">Safe shopping</string>
    <string name="settings_trade_safe_desc">Safe shopping should always be at the forefront. Do you feel suspicious about anything? Ask the buyer or seller for more information first. If something does go wrong, please report the person involved to us.</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_notifications_desc">Would you like to receive notifications about the amount of items that were posted since your last visit?</string>
    <string name="settings_notifications_switch_on">Receive notifications</string>
    <string name="settings_notifications_switch_off">Don\'t receive notifications</string>
    <string name="settings_feedback_title">Feedback</string>
    <string name="settings_feedback_desc">We are always working hard to improve Shoppica. Do you have any feedback or suggestions? Please let us know!</string>
    <string name="settings_follow_title">Instagram</string>
    <string name="settings_follow_desc">Stay up-to-date on the latest updates and promotions by following us on Instagram!</string>
    <string name="settings_logout">Log out</string>
    <string name="settings_logout_desc">Are you sure you want to log out?</string>
    <string name="settings_version">Current version: %1$s</string>
    <string name="settings_dialog_feed_back_title">Feedback</string>
    <string name="settings_dialog_feed_back_sub_title">Do you have any suggestions for us? Please let us know.</string>
    <string name="settings_dialog_feed_back_hint_message">Write a message…</string>
    <string name="settings_dialog_trade_safe_title">Safe Shopping</string>
    <string name="settings_dialog_trade_safe_sub_title">Did something go wrong? Please report the person involved to us.</string>
    <string name="settings_dialog_trade_safe_hint_message">Write a message…</string>
    <string name="view_article_contact_title">Interested?</string>
    <string name="view_article_contact_sub_title">This item is being sold by %1$s from %2$s. %3$s</string>
    <string name="alert_add_contact">Contact methods</string>
    <string name="alert_add_whatsapp">Add WhatsApp</string>
    <string name="alert_add_instagram">Add Instagram</string>
    <string name="alert_add_email">Add Email</string>
    <string name="share_post_fb_title">Share your item on Facebook</string>
    <string name="share_post_fb_desc">Increase your chances at selling your item by sharing it on Facebook!</string>
    <string name="explain_camera_desc">It\'s time to sell your very first item!</string>
    <string name="explain_camera_desc1">Try to position your item so that it is in the middle of your screen. Then take one or multiple photos.</string>
    <string name="explain_camera_desc2">Once you\'re satisfied with your photos, continue to the next page where you can describe your item.</string>
    <string name="explain_camera_desc3"> That\'s all!</string>
    <string name="alert_error_fb_register_title">Registration failed</string>
    <string name="alert_error_fb_register_desc_0">Shoppica has experienced an issue while connecting to Facebook. Here are a few possible reasons:</string>
    <string name="alert_error_fb_register_desc_1">- Uw registered information is no longer valid in your Facebook app. Please check if this is the case.</string>
    <string name="alert_error_fb_register_desc_2">- The time on your phone is wrong and can affect the registration process. If this is case, you can change this in the settings of your phone.</string>
    <string name="alert_error_fb_register_desc_3">- You don\'t have the Facebook app installed. Please install it and try again.</string>
</resources>