<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    tools:ignore="contentDescription">

    <View
        android:id="@+id/into_root_dialog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintDimensionRatio="H,1:1"
        android:background="@drawable/into_dialog_report_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/into_report_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:textAppearance="@style/bold"
        android:textColor="#555555"
        android:text="@string/settings_dialog_feed_back_title"
        android:textSize="22sp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/into_root_dialog"
        app:layout_constraintEnd_toEndOf="@+id/into_root_dialog"
        app:layout_constraintStart_toStartOf="@+id/into_root_dialog"
        app:layout_constraintTop_toTopOf="@+id/into_root_dialog"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/into_report_sub_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:lineSpacingExtra="2dp"
        android:textAppearance="@style/semiBold"
        android:textColor="#ababab"
        android:text="@string/settings_dialog_feed_back_sub_title"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/into_root_dialog"
        app:layout_constraintEnd_toEndOf="@+id/into_root_dialog"
        app:layout_constraintStart_toStartOf="@+id/into_root_dialog"
        app:layout_constraintTop_toBottomOf="@+id/into_report_title"
        app:layout_constraintVertical_bias="0.05" />


    <ViewSwitcher
        android:id="@+id/into_switcher"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/into_root_dialog"
        app:layout_constraintEnd_toEndOf="@+id/into_root_dialog"
        app:layout_constraintStart_toStartOf="@+id/into_root_dialog"
        app:layout_constraintTop_toBottomOf="@+id/into_report_sub_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">


            <EditText
                android:id="@+id/into_report_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/into_report_edittext"
                android:gravity="top|start"
                android:hint="@string/settings_dialog_feed_back_hint_message"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="5"
                android:minLines="4"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:scrollbars="vertical"
                android:textAppearance="@style/medium"
                android:textColor="#858585"
                android:textColorHint="@color/gray13"
                android:textCursorDrawable="@drawable/into_blue_cursor"
                android:textSize="15sp" />


            <Button
                android:id="@+id/into_report_user"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/into_btn_feed_back_dialog"
                android:stateListAnimator="@null"
                android:text="@string/btn_action_feed_back"
                android:includeFontPadding="false"
                android:textAppearance="@style/semiBold"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </LinearLayout>


    </ViewSwitcher>


</android.support.constraint.ConstraintLayout>